--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -183,6 +183,7 @@ html {
 @import "./blocks/instagram";
 @import "./blocks/menuToggle";
 @import "./blocks/tours";
+@import "./blocks/animated";
 
 .none {
   display: none;
