--- a/css/scss/blocks/contacts.scss
+++ b/css/scss/blocks/contacts.scss
@@ -21,6 +21,11 @@
     justify-content: space-between;
   }
 
+  &__social {
+    column-gap: 15px;
+    justify-content: space-evenly;
+  }
+
   @media (max-width: 950px) {
     padding-bottom: 100px;
     &__row {
