add animations to RU version

--- a/css/main.css
+++ b/css/main.css
@@ -1136,6 +1136,14 @@ html {
   animation-duration: 2s;
 }
 
+.animate__fadeIn.animate__animated {
+  animation-duration: 3s;
+}
+
+.animate__fadeInRight.animate__animated {
+  animation-duration: 2s;
+}
+
 .animate__visiable-custom {
   opacity: 0;
 }
