--- a/css/scss/blocks/contacts.scss
+++ b/css/scss/blocks/contacts.scss
@@ -23,7 +23,7 @@
 
   &__social {
     column-gap: 15px;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 
   @media (max-width: 950px) {
